--- a/Milestone3/css/style.css
+++ b/Milestone3/css/style.css
@@ -44,7 +44,7 @@
     height: 70px;
 }
 
-.utenteSelezionato {
+.utenteSelezionato:focus {
     background-color: rgb(233, 235, 235) !important;
 }
 
